# Course_work_Django

./: .flake8  .gitignore  README.md  black_list_words.json  env.sample  env_template.txt  groups.json  mailing_attempt_fixture.json  mailing_fixture.json  message_fixture.json  pyproject.toml  recipient_fixture.json  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_options.py
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/auth_users/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
mailing/config/: settings.py  urls.py
mailing/mailing_service/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options_alter_mailing_finish_send_at_and_more.py  0002_mailingattempt.py  0003_mailing_recipients.py  0003_rename_mailing_response_mailingattempt_mail_server_response_and_more.py  0004_alter_mailing_finish_send_at_and_more.py  0004_alter_mailing_recipients.py  0005_alter_mailing_finish_send_at_and_more.py  0005_alter_mailing_recipients.py  0006_alter_mailing_finish_send_at_and_more.py  0006_alter_mailing_first_sending.py  0007_alter_mailing_first_sending_alter_mailing_status.py  0008_recipientmailing_avatar.py  0009_alter_mailingattempt_status.py  0010_mailing_is_active_mailing_owner_message_owner_and_more.py  0011_alter_mailing_options.py  0012_mailingattempt_owner.py
mailing/templates/: base.html  form.html  list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_list.html  mailingattempt_list.html  message_confirm_delete.html  (+4 more)
main/: urls.py  views.py
messages_mailing/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recipiens/: admin.py  forms.py  models.py  urls.py  views.py
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
(+123 files in other folders)
