[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["Michail Fedyaev <drovosekov1910@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2 = "^2.9.10"
pillow = "^11.0.0"
redis = "^5.2.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
python-dotenv = "^1.0.1"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119
